# vidra

./: .gitignore  Cargo.toml  LICENSE  README.md  TASKLIST-webscene-editor.md  TASKLIST.md  adapt_template.py  bench_amrs.md  build_dist.sh  investor.md  lib.vidra  multi_target_test.vidra  package-lock.json  package.json  plan-webscene-and-videoeditor.md  social_post.vidra  test_app.vidra  test_audio.vidra  test_brand.vidra  test_image.vidra  test_video.vidra
.github/workflows/: ci.yml.disabled  render-preview.yml.disabled
benchmark/: 1080p_solid.vidra  4k_complex.vidra
crates/vidra-cli/: Cargo.toml
crates/vidra-cli/src/: ai.rs  auth.rs  bench_runner.rs  brand_tools.rs  dev_server.rs  dev_ui.html  editor_server.rs  jobs_cloud.rs  jobs_tools.rs  licenses_tools.rs  main.rs  mcp.rs  mcp_tools.rs  media.rs  plugin_tools.rs  publish_tools.rs  receipt.rs  remote_assets.rs  storyboard_tools.rs  sync_cloud.rs  sync_tools.rs  telemetry_tools.rs  template_manager.rs  test_runner.rs  test_support.rs  workspace_tools.rs
crates/vidra-cli/tests/: mcp_stdio_purity.rs
crates/vidra-core/: Cargo.toml
crates/vidra-core/src/: color.rs  config.rs  error.rs  frame.rs  hash.rs  lib.rs  math.rs  plugin.rs  time.rs  types.rs  vfx.rs
crates/vidra-encode/: Cargo.toml
crates/vidra-encode/src/: apng.rs  ffmpeg.rs  gif.rs  lib.rs  webm.rs
crates/vidra-fx/: Cargo.toml
crates/vidra-fx/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs
crates/vidra-ir/: Cargo.toml
crates/vidra-ir/src/: animation.rs  asset.rs  builder.rs  crdt.rs  data.rs  layer.rs  layout.rs  lib.rs  project.rs  scene.rs  transition.rs  validate.rs
crates/vidra-lang/: Cargo.toml
crates/vidra-lang/src/: advanced_anim.rs  ast.rs  checker.rs  compiler.rs  formatter.rs  lexer.rs  lib.rs  parser.rs
crates/vidra-lsp/: Cargo.toml
crates/vidra-lsp/src/: lib.rs
crates/vidra-render/: Cargo.toml
crates/vidra-render/benches/: render_benches.rs
crates/vidra-render/src/: compositor.rs  compositor.wgsl  compositor_projective.wgsl  custom_shader.rs  effects.rs  effects.wgsl  gpu.rs  image_loader.rs  lib.rs  pipeline.rs  text.rs  video_decoder.rs
crates/vidra-render/tests/: conformance_test.rs
crates/vidra-wasm/: Cargo.toml
crates/vidra-wasm/src/: lib.rs  renderer.rs
crates/vidra-web/: Cargo.toml  package-lock.json  package.json
crates/vidra-web/benches/: bench.html  capture_benches.rs
crates/vidra-web/scripts/: capture.js
crates/vidra-web/src/: backend.rs  lib.rs  playwright.rs  session.rs
crates/vidra-web/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/vidra-web/src/playwright/: playwright_tests.rs
demo_mcp/: main.vidra
demo_project/: main.vidra  vidra.config.json
demo_project2/: main.vidra  vidra.config.json
demo_project3/: vidra.config.json
docs/: ai_workflows.md  architecture.md  benchmark_evidence_template.md  investor_checklist.md  ir-spec.md  llm.md  quickstart.md  small-llm.md  vidrascript.md  web-scenes.md
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: vidra.tmLanguage.json
examples/: demo.vidra  test_platform_webview.vidra  web_chart.vidra  web_interactive.vidra  web_react.vidra
examples/web/: chart.html  globe.html  test_platform.html  ticker.html
issues/: 001-anchor-point-mismatch.md  002-strict-image-decoding.md  003-audio-muxing-silent.md  004-typescript-builder-sdk.md  005-wasm-browser-player.md  ISSUE_TEMPLATE.md  VIDRA_MCP_REPORT.md  VIDRA_MCP_REPORT_updated.md  mcp_dx_review.md
issues/001-anchor-point-mismatch/proof/: README.md  test.vidra
issues/002-strict-image-decoding/proof/: README.md  test.vidra
issues/003-audio-muxing-silent/proof/: README.md  test.vidra
plan/: adr-001-phase0-architecture.md  tasklist.md  vidra_prd_v2.1.md  vidra_prd_v2.md
scripts/: bench_compare.py  install.sh  local_ci.sh
showcase/: SHOWCASE_INDEX.md  index.html  manifest.json  render_showcase.sh
test_project/: main.vidra  vidra.config.toml
tests/snapshots/: benchmarks.json  test_audio_report.html
