[package]
name = "vidra-encode"
description = "Vidra encoding — frames to video/image files (H.264, VP9, GIF, APNG)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vidra-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
png = "0.17"
