[package]
name = "vidra-ir"
description = "Vidra Intermediate Representation — the canonical scene graph for video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vidra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
