[package]
name = "vidra-wasm"
description = "Vidra WASM module — browser-side video rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vidra-core = { workspace = true }
vidra-ir = { workspace = true }
vidra-lang = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
fontdue = { workspace = true }
image = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Performance",
    "Window",
] }
getrandom = { version = "0.2", features = ["js"] }
evalexpr = "13.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
