[package]
name = "vidra-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vidra-core = { path = "../vidra-core" }
vidra-ir = { path = "../vidra-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1.89"
image.workspace = true
base64 = "0.22.1"
