[package]
name = "vidra-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vidra-core = { path = "../vidra-core" }
vidra-ir = { path = "../vidra-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1.89"
image.workspace = true
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSURLRequest", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSImage", "NSBitmapImageRep", "NSGraphicsContext", "NSRunningApplication"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKUserContentController", "WKUserScript", "WKSnapshotConfiguration", "WKNavigation"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "capture_benches"
harness = false
